--- a/index.html
+++ b/index.html
@@ -81,10 +81,10 @@
 <body>
     <header>
         <h1>محمدرضا عابد</h1>
-        <p class="title">عنوان شغلی یا تخصص شما</p>
+        <p class="title">computer engineering student</p>
         <p>
-            <a href="mailto:your-email@example.com">your-email@example.com</a> | 
-            <a href="tel:+989123456789">09123456789</a> | 
+            <a href="mailto: jobs17646@gmail.com">jobs17646@gmail.com</a> | 
+            <a href="tel:+989357853685">09357853685</a> | 
             <a href="https://github.com/username" target="_blank">GitHub</a>
         </p>
     </header>
