--- a/index.html
+++ b/index.html
@@ -92,7 +92,9 @@
     <section>
         <h2>درباره من</h2>
         <p>
-            توضیح کوتاه درباره خودتان، مهارت‌های کلیدی و اهدافتان. این متن می‌تواند 2-3 پاراگراف باشد.
+          من دانشجوی رشته‌ی مهندسی کامپیوتر هستم و با علاقه‌مندی عمیق به دنیای برنامه‌نویسی و توسعه نرم‌افزار، مسیر حرفه‌ای خودم را در این حوزه دنبال می‌کنم. در کنار تحصیل، به‌صورت مستمر روی یادگیری مهارت‌های فنی تمرکز دارم و با پشتکار بالا دوره‌های تخصصی مثل «صفر تا صد پایتون» را با هدف درک عمیق مفاهیم و توانایی پیاده‌سازی پروژه‌های واقعی دنبال می‌کنم.
+
+علاوه بر پایتون، با زبان ++C و HTML نیز آشنایی دارم و توانایی استفاده از آن‌ها را در پروژه‌های پایه‌ای و متوسط دارم. هدف من این است که در آینده به عنوان یک توسعه‌دهنده نرم‌افزار با توانایی حل مسئله و درک دقیق مفاهیم برنامه‌نویسی فعالیت کنم و به شکل مداوم مهارت‌هایم را ارتقاء دهم.
         </p>
     </section>
 
