--- a/index.html
+++ b/index.html
@@ -101,26 +101,9 @@
     <section>
         <h2>مهارت‌ها</h2>
         <ul>
-            <li>مهارت اول (مثال: طراحی وب)</li>
-            <li>مهارت دوم (مثال: برنامه‌نویسی پایتون)</li>
-            <li>مهارت سوم (مثال: طراحی گرافیک)</li>
-            <li>مهارت چهارم (مثال: تحلیل داده)</li>
-        </ul>
-    </section>
-
-    <section>
-        <h2>سوابق کاری</h2>
-        <h3>عنوان شغل - نام شرکت</h3>
-        <p>تاریخ شروع - تاریخ پایان</p>
-        <ul>
-            <li>مسئولیت‌ها و دستاوردهای شما</li>
-            <li>نمونه‌ای از پروژه‌های انجام شده</li>
-        </ul>
-        
-        <h3>عنوان شغل - نام شرکت</h3>
-        <p>تاریخ شروع - تاریخ پایان</p>
-        <ul>
-            <li>مسئولیت‌ها و دستاوردهای شما</li>
+            <li>برنامه نویسی با پایتون به مدت یک سال</li>
+            <li>برنامه نویسی و حل مسئله سی پلاس پلاس</li>
+            <li>طراحی وب با اچ تی ام ال</li>
         </ul>
     </section>
 
