--- a/index.html
+++ b/index.html
@@ -47,6 +47,13 @@
             border-radius: 5px;
             box-shadow: 0 2px 5px rgba(0,0,0,0.1);
         }
+
+<link href="https://cdn.fontcdn.ir/Font/Persian/Vazir/Vazir.css" rel="stylesheet">
+<style>
+  body {
+    font-family: 'Vazir', sans-serif;
+  }
+</style>
         
         h2 {
             color: #3498db;
