--- a/index.html
+++ b/index.html
@@ -54,7 +54,14 @@
     font-family: 'Vazir', sans-serif;
   }
 </style>
-        
+
+        section {
+  transition: transform 0.3s ease;
+}
+section:hover {
+  transform: translateY(-5px);
+}
+    
         h2 {
             color: #3498db;
             border-bottom: 2px solid #3498db;
